# course_work_django

./: Procfile  celery.sh  celerybeat-schedule  db.sqlite3  install.bat  pyproject.toml  requirements.txt  start.bat
course_work/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
pawnshop/: apps.py  data.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
pawnshop/migrations/: 0001_initial.py  0002_alter_client_age_alter_client_first_name_and_more.py  0003_alter_client_passport_num.py  0004_alter_client_passport_num.py
static/: main.css  main.css.map  main.sass  manifest.json
static/js/: item_new.js  sw.js
templates/: base.html
templates/pawnshop/: client_detail.html  home.html  item_detail.html  item_edit.html  item_new.html  search.html
