[tool.poetry]
name = "course_work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
celery = "^5.2.6"
django-celery-results = "^2.3.1"
redis = "^4.2.2"
markdown2 = "^2.4.3"
weasyprint = "^55.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
